update: handle changed to gold-price-updater-2024 via CLI deploy
- Updated name and handle in shopify.app.toml
- Successfully deployed via shopify app deploy --force
- Partners now shows gold-price-updater-6 (auto-adjusted by Shopify)
- Reset include_config_on_deploy to false to prevent future overwrites

--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -1,8 +1,8 @@
 # Learn more about configuring your app at https://shopify.dev/docs/apps/tools/cli/configuration
 
 client_id = "2f40bebdf8ef160d9aa4cf3f915a6a75"
-name = "gold-price-auto"
-handle = "gold-price-auto"
+name = "gold-price-updater-2024"
+handle = "gold-price-updater-2024"
 application_url = "https://gold-price-updater-pb8o.vercel.app"
 embedded = true
 
