--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,10 @@
 {
   "buildCommand": "npm run build",
   "outputDirectory": "build",
+  "functions": {
+    "regions": ["sin1"],
+    "runtime": "nodejs20.x"
+  },
   "crons": [
     { "path": "/api/cron/price-update", "schedule": "0 1 * * 1-5" }
   ]
