--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,8 @@
 {
+  "$schema": "https://openapi.vercel.sh/vercel.json",
   "buildCommand": "npm run build",
   "outputDirectory": "build",
-  "functions": {
-    "regions": ["sin1"],
-    "runtime": "nodejs20.x"
-  },
+  "regions": ["sin1"],
   "crons": [
     { "path": "/api/cron/price-update", "schedule": "0 1 * * 1-5" }
   ]
