--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,9 @@
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "buildCommand": "npm run build",
   "outputDirectory": "build",
-  "regions": ["sin1"]
+  "regions": ["sin1"],
+  "crons": [
+    { "path": "/api/cron", "schedule": "0 1 * * 1-5" },
+    { "path": "/api/cron", "schedule": "15 1 * * 1-5" }
+  ]
 }
